[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypothesis-graphql"
version = "0.9.2"
description = "Hypothesis strategies for GraphQL queries"
keywords = ["hypothesis", "graphql", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Hypothesis",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
]
authors = [{ name = "Dmitry Dygalo", email = "dadygalo@gmail.com" }]
maintainers = [{ name = "Dmitry Dygalo", email = "dadygalo@gmail.com" }]
readme = "README.md"
license = "MIT"
include = ["src/hypothesis_graphql/py.typed"]
requires-python = ">=3.7"
dependencies = [
    "hypothesis>=5.8.0,<7.0",
    "graphql-core>=3.1.0,<3.3.0",
]

[project.optional-dependencies]
tests = [
    "coverage>=7",
    "pytest>=6.2.0,<8",
    "pytest-xdist>=2.5,<3.0",
]
cov = [
    "coverage-enable-subprocess",
    "coverage[toml]>=7",
]
dev = ["hypothesis_graphql[tests,cov]"]

[project.urls]
Changelog = "https://github.com/Stranger6667/hypothesis-graphql/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Stranger6667/hypothesis-graphql"
Funding = "https://github.com/sponsors/Stranger6667"
"Source Code" = "https://github.com/Stranger6667/hypothesis-graphql"

[tool.black]
line-length = 120
target_version = ["py37"]

[tool.isort]
line_length = 120
multi_line_output = 3
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "hypothesis_graphql"
known_third_party =["graphql", "hypothesis", "hypothesis_graphql", "pytest"]

[tool.coverage.run]
parallel = true
branch = true
source_pkgs = ["hypothesis_graphql"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass"
]
